
1.2.40 (unreleased)
-------------------

- oshaview: fixed a bug introduced in revision 1835 that prevented any keyword from being 
  displayed in the HTML header;  Also, keywords from the Subject list are now properly translated (thomasw)
- fixed accessibility problem where p must not appear within a span. This is due to the fact that the agency requires html rendering for descriptions. (pilz)



1.2.39 (2009-10-21)
-------------------

- Various tweaks to the Cleaning Workers / Topics SEP, Practical Solutions
  Advanced search field #375 #376 #409 (deroiste)
- i18n for "questions in parliament / BeSWIC" (thomasw)

1.2.38 (2009-10-20)
-------------------

- Fixed dependencies, minor code style improvements and handling of edge cases
  in the Topics view (deroiste)

1.2.37 (2009-10-18)
-------------------

- Added the blog RSS feed to rss-feeds browser view according to request in #239 (pilz)
- Added a locales-directory for OSHA specific translation customisations (thomasw)
- Topics views changed to use a rich document and related images or video for
  content. (deroiste)
- Finalised i18n for Practical Solutions (deroiste)
- Add the necessary meta and link tags for sharing with facebook (jcbrand)
- added "questions-in-parliament" search, a special search interface for publications on BeSWIC (thomasw)

1.2.36 (2009-10-12)
-------------------

- Limiting the Category filter to one category and fixing the subcategory
  filter. #375 (deroiste)

1.2.35 (2009-10-09)
-------------------

- Practical solution pages: adding more options to the search filter, fixing
  the category and subcategory filter. (deroiste)

1.2.34 (2009-10-09)
-------------------

- bugfix for the display of Subject on the blog_view (thomasw)

1.2.33 (2009-10-08)
-------------------

- Practical solutions: separating Publications, removing collabsible search
  results and instead linking to practical solutions pages with appropriately
  filtered results. (deroiste)

1.2.32 (2009-10-07)