@@ -1,31 +1,3 @@
-<object style="border: none;" 
-        classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" 
-        codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,0,0" 
-        width="200" height="60" 
-        tal:attributes="width options/width;
-                        height options/height;
-                        title options/title">
-      <param name="movie"
-             value="http://url"
-             tal:attributes="value options/url" />
-      <param name="quality" value="high" />
-      <param name="bgcolor" value="white" />
-      <param name="wmode" value="transparent" />
-
-      <embed src="http://url"
-             quality="high" 
-             bgcolor="white"
-             wmode="transparent" 
-             width="200"
-             height="60" 
-             align="middle"
-             type="application/x-shockwave-flash"
-             pluginspage="http://www.macromedia.com/go/getflashplayer"
-             tal:attributes="src options/url;
-                             width options/width;
-                             height options/height;
-                             alt options/alt;
-                             title options/title;
-                             ">
-        </embed> 
-</object>
+<div tal:attributes="id view/id_attr" class="portletImage-flash">&nbsp;</div>
+<script type="text/javascript" tal:content="view/flashcode">
+</script>
